2007-08-04  Murad Tagirov  <tmurad@gmail.com>

    Added basic support of kml folders. MarbleModel iterates over list
    of kml folders and displays placemarks from each folder. This
    list of folders will be displayed in MarbleControlBox, so user
    will be able to enable/disable desired folder
    * src/lib/placemarkmanager.{h,cpp}
    * src/lib/kml/KMLDocument.{h,cpp}
    * src/lib/kml/KMLContainer.{h,cpp}
    * src/lib/MarbleModel.cpp

    Inherit KMLFeature -> PlaceMark, not KMLPlaceMark -> PlaceMark
    * src/lib/kml/KMLFeature.{h,cpp}
    * src/lib/kml/KMLPlaceMark.h


2007-08-04  Murad Tagirov  <tmurad@gmail.com>

    Refactored KMLContainer parsing. Ignore whitespaces while parsing.
    Added counter for current tag level to avoid parsing of wrong data.
    * src/lib/placemarkmanager.cpp
    * src/lib/kml/KMLDocumentParser.cpp
    * src/lib/kml/KMLContainerParser.{h,cpp}
    * src/lib/kml/KMLPointParser.cpp
    * src/lib/kml/KMLFeatureParser.cpp
    * src/lib/kml/KMLPlaceMarkParser.{h,cpp}
    * src/lib/kml/KMLDocument.cpp
    * src/lib/kml/KMLObjectParser.{h,cpp}

    Make PlaceMarkPainter's part which paint using VisiblePlaceMark comile again
    * src/lib/placemarkpainter.{h,cpp}

2007-08-04  Inge Wallin  <inge@lysator.liu.se>

	Move UI file include from the .h file to the cpp to make it easier
	to use for external applications.
	* src/lib/MarbleControlBox.h: Don't inherit from
	Ui::MarbleControlBox
	* src/lib/MarbleControlBox.cpp: let Ui::MarbleControlBox be a part
	of MarbleControlBoxPrivate
	(all): add 'd->uiWidget.' to all uses of previous members.

	Make it possible to choose between Flat projection and globe
	projection in one place only (utils.h).
	* src/lib/vectormap.cpp,
	* src/lib/utils.h,
	* src/lib/MarbleWidget.cpp,
	* src/lib/placemarkpainter.cpp,
	* src/lib/MarbleModel.h,
	* src/lib/GlobeScanlineTextureMapper.h,
	* src/lib/vectormap.h,
	* src/lib/AbstractScanlineTextureMapper.h,
	* src/lib/MarbleModel.cpp,